# mx_provider

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-test-pypi.yml
mx_provider/: __init__.py  mxlookup.csv  providers.db  providers.py  test_provider.py
